--- a/shop.html
+++ b/shop.html
@@ -4,18 +4,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Products | Raghuvanshi Health Care</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       background: #f5f7fa;
+      scroll-behavior: smooth;
     }
     header {
       background: #1976d2;
       color: white;
       text-align: center;
       padding: 20px;
-      font-size: 24px;
+      font-size: 26px;
       font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      animation: fadeInDown 0.5s ease-in-out;
+    }
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
     .controls {
       display: flex;
@@ -24,6 +40,7 @@
       padding: 20px;
       background: #fff;
       justify-content: center;
+      animation: fadeIn 0.6s ease-in-out;
     }
     .controls input, .controls select {
       padding: 10px;
@@ -31,12 +48,26 @@
       border: 1px solid #ccc;
       font-size: 15px;
       min-width: 200px;
+      transition: border 0.3s ease;
+    }
+    .controls input:focus, .controls select:focus {
+      border-color: #1976d2;
+      outline: none;
     }
     .products-grid {
       display: grid;
       gap: 20px;
       padding: 20px;
       grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      animation: fadeIn 0.6s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
     }
     .card {
       background: white;
@@ -47,6 +78,7 @@
       flex-direction: column;
       position: relative;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: fadeIn 0.5s ease-in-out;
     }
     .card:hover {
       transform: translateY(-6px);
@@ -54,7 +86,7 @@
     }
     .card img {
       width: 100%;
-      height: 200px;
+      height: 220px;
       object-fit: contain;
       background-color: #fff;
       padding: 10px;
@@ -125,7 +157,7 @@
       font-size: 14px;
       border-radius: 8px;
       cursor: pointer;
-      transition: background 0.2s ease;
+      transition: background 0.3s ease;
     }
     .btns button:hover {
       background: #145ea8;
@@ -148,14 +180,24 @@
     .cart-btn-fixed:hover {
       background: #2e7d32;
     }
-    @media (max-width: 600px) {
-      .card img {
-        height: 160px;
-      }
-      .btns button {
-        font-size: 13px;
-        padding: 8px;
-      }
+    .popup-message {
+      position: fixed;
+      bottom: 100px;
+      right: 20px;
+      background: #4caf50;
+      color: #fff;
+      padding: 12px 20px;
+      border-radius: 8px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      font-size: 14px;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.4s ease;
+      z-index: 1000;
+    }
+    .popup-message.show {
+      opacity: 1;
+      transform: translateY(0);
     }
   </style>
 </head>
@@ -173,7 +215,8 @@
     </select>
   </div>
   <div class="products-grid" id="productsGrid"></div>
-  <div class="cart-btn-fixed" onclick="location.href='cart.html'">🛒 View Cart</div>
+  <div class="cart-btn-fixed" onclick="goToCart()">🛒 View Cart</div>
+  <div id="popup" class="popup-message">Added to cart!</div>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
     import { getFirestore, collection, getDocs, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
@@ -196,6 +239,13 @@ const searchInput = document.getElementById("searchInput");
 const categoryFilter = document.getElementById("categoryFilter");
 const sortSelect = document.getElementById("sortSelect");
 const productsGrid = document.getElementById("productsGrid");
+const popup = document.getElementById("popup");
+
+function showPopup(msg) {
+  popup.textContent = msg;
+  popup.classList.add("show");
+  setTimeout(() => popup.classList.remove("show"), 2500);
+}
 
 onAuthStateChanged(auth, user => {
   currentUser = user;
@@ -256,16 +306,14 @@ window.addToCart = async function(productId) {
     alert("Please login to add to cart.");
     return location.href = "login.html";
   }
-
   const product = products.find(p => p.id === productId);
   const cartRef = doc(db, `users/${currentUser.uid}/cart`, productId);
   const existing = await getDoc(cartRef);
-
   if (existing.exists()) {
-    alert("Already in cart.");
+    showPopup("Already in cart.");
   } else {
     await setDoc(cartRef, { ...product, addedAt: new Date() });
-    alert("Added to cart!");
+    showPopup("Added to cart!");
   }
 }
 
@@ -276,6 +324,14 @@ window.buyProduct = function(productId) {
   }
   sessionStorage.setItem("selectedProductId", productId);
   location.href = "checkout.html";
+}
+
+window.goToCart = function() {
+  if (!currentUser) {
+    alert("Please login to view your cart.");
+    return location.href = "login.html";
+  }
+  location.href = "cart.html";
 }
 
 loadProducts();
