--- a/login.html
+++ b/login.html
@@ -169,7 +169,7 @@
             } else if (role === "merchant") {
               window.location.href = "merchant-dashboard.html";
             } else {
-              window.location.href = "index.html";
+              window.location.href = "users-dashboard.html";
             }
           }, 1000);
         } else {
