--- a/users-dashboard.html
+++ b/users-dashboard.html
@@ -726,7 +726,7 @@ body {
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="services.html">Services</a>
-            <a href="login.html">Signup/login</a>
+            <a href="profile.html">Profile</a>
         </nav>
         <div class="hamburger">
             <div></div>
@@ -737,7 +737,7 @@ body {
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="services.html">Services</a>
-            <a href="login.html">Signup/login</a>
+            <a href="profile.html">Profile</a>
         </div>
     </header><script>
     const hamburger = document.querySelector('.hamburger');
