--- a/users-dashboard.html
+++ b/users-dashboard.html
@@ -3,13 +3,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Raghuvanshi Healthcare</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Raghuvanshi " />
-   <link rel="manifest" href="/site.webmanifest" />
   <style>
 
             /* General Reset */
@@ -726,7 +719,7 @@ body {
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="services.html">Services</a>
-            <a href="login.html">Signup/login</a>
+            <a href="profile.html">Profile</a>
         </nav>
         <div class="hamburger">
             <div></div>
@@ -737,7 +730,7 @@ body {
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="services.html">Services</a>
-            <a href="login.html">Signup/login</a>
+            <a href="profile.html">Profile</a>
         </div>
     </header><script>
     const hamburger = document.querySelector('.hamburger');
@@ -1084,7 +1077,7 @@ body {
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="services.html">Services</a>
-            <a href="login.html">Signup/login</a>
+            <a href="profile.html">Profile</a>
         </nav>
         <div class="hamburger">
             <div></div>
@@ -1095,7 +1088,7 @@ body {
             <a href="index.html">Home</a>
             <a href="shop.html">Shop</a>
             <a href="services.html">Services</a>
-            <a href="login.html">Signup/login</a>
+            <a href="profile.html">Profile</a>
         </div>
     </header><script>
     const hamburger = document.querySelector('.hamburger');
