--- a/shop.html
+++ b/shop.html
@@ -182,153 +182,146 @@
   <div class="cart-btn-fixed" onclick="goToCart()">🛒 View Cart</div>
   <div id="popup" class="popup-message">Added to cart!</div>
 
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-  import {
-    getFirestore, collection, getDocs, doc, setDoc, getDoc
-  } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
-  import {
-    getAuth, onAuthStateChanged
-  } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js";
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getFirestore, collection, getDocs, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyAbknkfD6Je1a3wDZRTzn6lC62CNUhhwLc",
-    authDomain: "store-471f1.firebaseapp.com",
-    projectId: "store-471f1",
-    storageBucket: "store-471f1.appspot.com",
-    messagingSenderId: "619523242611",
-    appId: "1:619523242611:web:fdfa53044c62f844574806"
-  };
+    const firebaseConfig = {
+      apiKey: "AIzaSyAbknkfD6Je1a3wDZRTzn6lC62CNUhhwLc",
+      authDomain: "store-471f1.firebaseapp.com",
+      projectId: "store-471f1",
+      storageBucket: "store-471f1.appspot.com",
+      messagingSenderId: "619523242611",
+      appId: "1:619523242611:web:fdfa53044c62f844574806"
+    };
 
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-  const auth = getAuth(app);
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const auth = getAuth(app);
 
-  let currentUser = null;
-  let products = [];
+    let products = [];
+    const searchInput = document.getElementById("searchInput");
+    const categoryFilter = document.getElementById("categoryFilter");
+    const sortSelect = document.getElementById("sortSelect");
+    const productsGrid = document.getElementById("productsGrid");
+    const popup = document.getElementById("popup");
 
-  const searchInput = document.getElementById("searchInput");
-  const categoryFilter = document.getElementById("categoryFilter");
-  const sortSelect = document.getElementById("sortSelect");
-  const productsGrid = document.getElementById("productsGrid");
-  const popup = document.getElementById("popup");
-
-  function showPopup(msg, isError = false) {
-    popup.textContent = msg;
-    popup.style.background = isError ? "#e53935" : "#4caf50";
-    popup.classList.add("show");
-    setTimeout(() => popup.classList.remove("show"), 2500);
-  }
-
-  onAuthStateChanged(auth, user => {
-    currentUser = user;
-  });
-
-  async function loadProducts() {
-    const snapshot = await getDocs(collection(db, "products"));
-    products = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-    renderCategories();
-    renderProducts();
-  }
-
-  function renderCategories() {
-    const categories = [...new Set(products.map(p => p.category).filter(Boolean))];
-    categoryFilter.innerHTML = `<option value="">All Categories</option>` +
-      categories.map(cat => `<option value="${cat}">${cat}</option>`).join('');
-  }
-
-  function renderProducts() {
-    let filtered = products.filter(p =>
-      p.name.toLowerCase().includes(searchInput.value.toLowerCase()) &&
-      (categoryFilter.value === "" || p.category === categoryFilter.value)
-    );
-
-    if (sortSelect.value === "low-high") {
-      filtered.sort((a, b) => a.price - b.price);
-    } else if (sortSelect.value === "high-low") {
-      filtered.sort((a, b) => b.price - a.price);
+    function showPopup(msg, isError = false) {
+      popup.textContent = msg;
+      popup.style.background = isError ? "#e53935" : "#4caf50";
+      popup.classList.add("show");
+      setTimeout(() => popup.classList.remove("show"), 2500);
     }
 
-    productsGrid.innerHTML = filtered.map(p => `
-      <div class="card">
-        ${p.discount ? `<div class="discount-badge">-${p.discount}%</div>` : ""}
-        <img src="${p.imageUrl || 'https://via.placeholder.com/300x200?text=No+Image'}" alt="${p.name}">
-        <div class="card-content">
-          <h3>${p.name}</h3>
-          <div class="price">₹${p.price.toFixed(2)}</div>
-          <div class="category">${p.category || ''}</div>
-          <div class="desc">${p.desc || ''}</div>
-          <div class="tags">
-            ${(p.tags || []).map(tag => `<span class="tag">${tag}</span>`).join('')}
-          </div>
-          <div class="btns">
-            <button onclick="handleAddToCart('${p.id}')">Add to Cart</button>
-            <button onclick="handleBuyNow('${p.id}')">Buy Now</button>
+    onAuthStateChanged(auth, user => {
+      if (!user) {
+        // Disable buttons if not logged in
+        document.querySelectorAll(".btns button").forEach(btn => {
+          btn.disabled = true;
+          btn.style.opacity = "0.5";
+          btn.title = "Login required";
+        });
+
+        document.querySelector(".cart-btn-fixed").onclick = redirectToLogin;
+      }
+    });
+
+    async function loadProducts() {
+      const snapshot = await getDocs(collection(db, "products"));
+      products = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+      renderCategories();
+      renderProducts();
+    }
+
+    function renderCategories() {
+      const categories = [...new Set(products.map(p => p.category).filter(Boolean))];
+      categoryFilter.innerHTML = `<option value="">All Categories</option>` +
+        categories.map(cat => `<option value="${cat}">${cat}</option>`).join('');
+    }
+
+    function renderProducts() {
+      let filtered = products.filter(p =>
+        p.name.toLowerCase().includes(searchInput.value.toLowerCase()) &&
+        (categoryFilter.value === "" || p.category === categoryFilter.value)
+      );
+
+      if (sortSelect.value === "low-high") {
+        filtered.sort((a, b) => a.price - b.price);
+      } else if (sortSelect.value === "high-low") {
+        filtered.sort((a, b) => b.price - a.price);
+      }
+
+      productsGrid.innerHTML = filtered.map(p => `
+        <div class="card">
+          ${p.discount ? `<div class="discount-badge">-${p.discount}%</div>` : ""}
+          <img src="${p.imageUrl || 'https://via.placeholder.com/300x200?text=No+Image'}" alt="${p.name}">
+          <div class="card-content">
+            <h3>${p.name}</h3>
+            <div class="price">₹${p.price.toFixed(2)}</div>
+            <div class="category">${p.category || ''}</div>
+            <div class="desc">${p.desc || ''}</div>
+            <div class="tags">${(p.tags || []).map(tag => `<span class="tag">${tag}</span>`).join('')}</div>
+            <div class="btns">
+              <button onclick="handleAddToCart('${p.id}')">Add to Cart</button>
+              <button onclick="handleBuyNow('${p.id}')">Buy Now</button>
+            </div>
           </div>
         </div>
-      </div>
-    `).join('');
-  }
-
-  searchInput.addEventListener("input", renderProducts);
-  categoryFilter.addEventListener("change", renderProducts);
-  sortSelect.addEventListener("change", renderProducts);
-
-  // Add to Cart
-  window.handleAddToCart = async function (productId) {
-    if (!auth.currentUser) return redirectToLogin();
-
-    try {
-      const product = products.find(p => p.id === productId);
-      const cartRef = doc(db, `users/${auth.currentUser.uid}/cart`, productId);
-      const existing = await getDoc(cartRef);
-
-      if (existing.exists()) {
-        const currentQty = existing.data().quantity || 1;
-        await setDoc(cartRef, {
-          ...product,
-          quantity: currentQty + 1,
-          totalPrice: (currentQty + 1) * product.price,
-          addedAt: new Date()
-        });
-        showPopup("Cart quantity updated.");
-      } else {
-        await setDoc(cartRef, {
-          ...product,
-          quantity: 1,
-          totalPrice: product.price,
-          addedAt: new Date()
-        });
-        showPopup("Added to cart!");
-      }
-    } catch (error) {
-      console.error("Add to Cart Error:", error);
-      showPopup("Error adding to cart.", true);
+      `).join('');
     }
-  };
 
-  // Buy Now
-  window.handleBuyNow = function (productId) {
-    if (!auth.currentUser) return redirectToLogin();
+    searchInput.addEventListener("input", renderProducts);
+    categoryFilter.addEventListener("change", renderProducts);
+    sortSelect.addEventListener("change", renderProducts);
 
-    sessionStorage.setItem("selectedProductId", productId);
-    location.href = "checkout.html";
-  };
+    window.handleAddToCart = async function (productId) {
+      const user = auth.currentUser;
+      if (!user) return redirectToLogin();
 
-  // Go to Cart
-  window.goToCart = function () {
-    if (!auth.currentUser) return redirectToLogin();
-    location.href = "cart.html";
-  };
+      try {
+        const product = products.find(p => p.id === productId);
+        const cartRef = doc(db, `users/${user.uid}/cart`, productId);
+        const existing = await getDoc(cartRef);
 
-  // Redirect to login page
-  function redirectToLogin() {
-    alert("Please log in to continue.");
-    location.href = "login.html";
-  }
+        const quantity = existing.exists() ? (existing.data().quantity || 1) + 1 : 1;
+        await setDoc(cartRef, {
+          ...product,
+          quantity,
+          totalPrice: quantity * product.price,
+          addedAt: new Date()
+        });
+        showPopup(existing.exists() ? "Cart quantity updated." : "Added to cart!");
+      } catch (error) {
+        console.error("Add to Cart Error:", error);
+        showPopup("Error adding to cart.", true);
+      }
+    };
 
-  loadProducts();
-</script>
+    window.handleBuyNow = function (productId) {
+      if (!auth.currentUser) return redirectToLogin();
+      sessionStorage.setItem("selectedProductId", productId);
+      location.href = "checkout.html";
+    };
 
+    window.goToCart = function () {
+      if (!auth.currentUser) return redirectToLogin();
+      location.href = "cart.html";
+    };
+
+    function redirectToLogin() {
+      alert("Please login to continue.");
+      location.href = "login.html";
+    }
+
+    // Prevent back navigation from showing stale state
+    window.addEventListener("pageshow", function (event) {
+      if (event.persisted) {
+        location.reload();
+      }
+    });
+
+    loadProducts();
+  </script>
 </body>
 </html>
