--- a/products-dash.html
+++ b/products-dash.html
@@ -4,145 +4,232 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Product Manager</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f4f6f8;
-      margin: 0;
-      padding: 30px;
-    }
-    .container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 30px;
-      max-width: 1200px;
-      margin: auto;
-    }
-    h2 {
-      grid-column: span 2;
-      text-align: center;
-      font-size: 28px;
-    }
-    h3 {
-      margin-top: 0;
-    }
-    .card {
-      background: #fff;
-      border-radius: 14px;
-      padding: 24px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.05);
-    }
-    label {
-      font-weight: 600;
-      margin-top: 12px;
-      display: block;
-    }
-    input, textarea, select {
-      width: 100%;
-      padding: 10px;
-      margin-top: 6px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 15px;
-    }
-    textarea {
-      resize: vertical;
-    }
-    .tag-box {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 8px;
-    }
-    .tag-box label {
-      background: #e3f2fd;
-      padding: 6px 12px;
-      border-radius: 20px;
-    }
-    .preview img {
-      width: 100%;
-      max-height: 250px;
-      object-fit: cover;
-      border-radius: 10px;
-      margin-bottom: 15px;
-    }
-    .preview .tag {
-      background: #dcedc8;
-      color: #33691e;
-      font-size: 12px;
-      padding: 4px 10px;
-      border-radius: 50px;
-      margin-right: 5px;
-      display: inline-block;
-    }
-    .meta {
-      font-size: 13px;
-      color: #666;
-      margin-top: 10px;
-    }
-    button {
-      background: #388e3c;
-      color: white;
-      padding: 12px;
-      border: none;
-      border-radius: 10px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-top: 15px;
-      margin-right: 10px;
-    }
-    button.danger {
-      background: #e53935;
-    }
-    .controls {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 15px;
-    }
-    .controls input {
-      flex: 1;
-    }
-    .product-card {
-      border: 1px solid #ddd;
-      border-radius: 12px;
-      padding: 15px;
-      background: #fff;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    .product-card img {
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-    .product-card h4 {
-      margin: 10px 0 4px;
-      font-size: 16px;
-    }
-    .product-card p {
-      margin: 0;
-      font-size: 14px;
-      color: #555;
-    }
-    .product-card button {
-      margin-top: 10px;
-      background: #1976d2;
-      color: white;
-      border: none;
-      padding: 6px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 14px;
-    }
-    @media (max-width: 768px) {
-      .container {
-        grid-template-columns: 1fr;
-      }
-    }
+  
+<style>
+:root {
+  --bg-color: #f4f6f8;
+  --card-bg: #ffffff;
+  --primary-color: #1976d2;
+  --success-color: #2e7d32;
+  --danger-color: #d32f2f;
+  --text-color: #333333;
+  --muted-color: #666666;
+  --border-color: #e0e0e0;
+  --font: 'Segoe UI', sans-serif;
+  --radius: 12px;
+  --shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: var(--font);
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  padding: 20px;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+h2 {
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.card {
+  background-color: var(--card-bg);
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+  padding: 24px;
+  margin-bottom: 30px;
+}
+
+h3 {
+  font-size: 22px;
+  margin-bottom: 20px;
+  color: var(--primary-color);
+}
+
+label {
+  font-weight: 600;
+  display: block;
+  margin-top: 18px;
+  margin-bottom: 6px;
+}
+
+input,
+textarea,
+select {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid var(--border-color);
+  border-radius: var(--radius);
+  background-color: #fafafa;
+  font-size: 15px;
+  transition: 0.2s border-color ease;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+  border-color: var(--primary-color);
+  background-color: #fff;
+}
+
+textarea {
+  resize: vertical;
+  min-height: 80px;
+}
+
+.tag-box {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 8px;
+}
+
+.tag-box label {
+  background-color: #e3f2fd;
+  padding: 6px 12px;
+  border-radius: 20px;
+  font-size: 14px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.form-actions {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  margin-top: 24px;
+}
+
+button {
+  flex: 1 1 48%;
+  padding: 12px 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: var(--radius);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  min-width: 140px;
+}
+
+button[type="submit"] {
+  background-color: var(--success-color);
+  color: white;
+}
+
+button.danger {
+  background-color: var(--danger-color);
+  color: white;
+}
+
+/* --- LIVE PREVIEW --- */
+
+.live-preview {
+  margin-top: 30px;
+  border-top: 1px dashed var(--border-color);
+  padding-top: 20px;
+}
+
+.live-preview h3 {
+  font-size: 20px;
+  margin-bottom: 12px;
+  color: var(--primary-color);
+}
+
+.preview-box {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  background-color: #fafafa;
+  padding: 16px;
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+  align-items: flex-start;
+}
+
+.preview-box img {
+  width: 280px;
+  max-width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+.preview-details {
+  flex: 1;
+  min-width: 250px;
+}
+
+.preview-details h3 {
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+
+.preview-details p {
+  margin: 6px 0;
+  font-size: 14px;
+  color: var(--muted-color);
+}
+
+.preview-details .tag {
+  display: inline-block;
+  background-color: #dcedc8;
+  color: #33691e;
+  font-size: 13px;
+  padding: 4px 10px;
+  border-radius: 20px;
+  margin-right: 6px;
+  margin-top: 5px;
+}
+
+.meta {
+  font-size: 12px;
+  color: #999;
+  margin-top: 10px;
+}
+
+/* --- RESPONSIVE --- */
+
+@media (max-width: 768px) {
+  .form-actions {
+    flex-direction: column;
+  }
+
+  .preview-box {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .preview-details {
+    width: 100%;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
+
+  button {
+    width: 100%;
+  }
+}
   </style>
 </head>
 <body>
@@ -203,22 +290,20 @@
       </form>
     </div>
 
-    <div class="card preview">
-      <img id="previewImage" src="https://via.placeholder.com/300x200?text=Product+Image" />
-      <h3 id="previewName">Product Name</h3>
-      <p><strong>₹</strong><span id="previewPrice">0.00</span></p>
-      <p><strong>Category:</strong> <span id="previewCategory">Category</span></p>
-      <p><strong>Brand:</strong> <span id="previewBrand">Brand</span></p>
-      <p id="previewDesc">Product description...</p>
-      <div id="previewTags"></div>
-      <div class="meta" id="previewMeta">Created by: —<br>Updated by: —</div>
-    </div>
-
-    <h3 style="grid-column: span 2;">All Products</h3>
-    <div class="card" style="grid-column: span 2;">
-      <div id="productGrid" style="display: grid; gap: 20px; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));"></div>
-    </div>
+    <div class="card preview-container">
+  <div class="preview-image">
+    <img id="previewImage" src="https://via.placeholder.com/300x200?text=Product+Image" />
   </div>
+  <div class="preview-info">
+    <h3 id="previewName">Product Name</h3>
+    <p><strong>₹</strong><span id="previewPrice">0.00</span></p>
+    <p><strong>Category:</strong> <span id="previewCategory">Category</span></p>
+    <p><strong>Brand:</strong> <span id="previewBrand">Brand</span></p>
+    <p id="previewDesc">Product description...</p>
+    <div id="previewTags"></div>
+    <div class="meta" id="previewMeta">Created by: --<br>Updated by: --</div>
+  </div>
+</div>
 
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js';
@@ -354,7 +439,7 @@
       productSelector.value = "";
       formTitle.textContent = "Create New Product";
       document.getElementById("previewImage").src = "https://via.placeholder.com/300x200?text=Product+Image";
-      document.getElementById("previewMeta").innerHTML = "Created by: —<br>Updated by: —";
+      document.getElementById("previewMeta").innerHTML = "Created by: --<br>Updated by: --";
       updatePreview();
     }
 
