--- a/products-dash.html
+++ b/products-dash.html
@@ -6,7 +6,8 @@
   <title>Admin Product Manager</title>
   
 <style>
-:root {
+
+  :root {
   --bg-color: #f4f6f8;
   --card-bg: #ffffff;
   --primary-color: #1976d2;
@@ -18,12 +19,25 @@
   --font: 'Segoe UI', sans-serif;
   --radius: 12px;
   --shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  --transition-fast: 0.2s ease-in-out;
+  --transition-slow: 0.4s ease-in-out;
+}
+
+/* DARK MODE */
+.dark-mode {
+  --bg-color: #1e1e1e;
+  --card-bg: #2c2c2c;
+  --text-color: #f0f0f0;
+  --muted-color: #aaaaaa;
+  --border-color: #444;
+  --shadow: 0 4px 12px rgba(255, 255, 255, 0.08);
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: background-color var(--transition-slow), color var(--transition-slow);
 }
 
 body {
@@ -31,31 +45,37 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   padding: 20px;
+  line-height: 1.5;
 }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
+  padding: 0 16px;
 }
 
+/* Headings */
 h2 {
   font-size: 32px;
   text-align: center;
   margin-bottom: 30px;
-}
-
-.card {
-  background-color: var(--card-bg);
-  border-radius: var(--radius);
-  box-shadow: var(--shadow);
-  padding: 24px;
-  margin-bottom: 30px;
+  animation: fadeIn 0.8s ease-in;
 }
 
 h3 {
   font-size: 22px;
   margin-bottom: 20px;
   color: var(--primary-color);
+}
+
+/* Cards & Forms */
+.card {
+  background-color: var(--card-bg);
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+  padding: 24px;
+  margin-bottom: 30px;
+  animation: fadeInUp 0.6s ease-out;
 }
 
 label {
@@ -74,7 +94,7 @@ select {
   border-radius: var(--radius);
   background-color: #fafafa;
   font-size: 15px;
-  transition: 0.2s border-color ease;
+  transition: border-color var(--transition-fast), background-color var(--transition-fast);
 }
 
 input:focus,
@@ -90,6 +110,7 @@ textarea {
   min-height: 80px;
 }
 
+/* Tag UI */
 .tag-box {
   display: flex;
   flex-wrap: wrap;
@@ -108,11 +129,13 @@ textarea {
   gap: 6px;
 }
 
+/* Buttons */
 .form-actions {
   display: flex;
   flex-wrap: wrap;
   gap: 12px;
   margin-top: 24px;
+  justify-content: space-between;
 }
 
 button {
@@ -122,8 +145,17 @@ button {
   border: none;
   border-radius: var(--radius);
   cursor: pointer;
-  transition: background-color 0.3s ease;
   min-width: 140px;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  transition: background-color var(--transition-fast), transform var(--transition-fast);
+}
+
+button:hover {
+  transform: translateY(-2px);
 }
 
 button[type="submit"] {
@@ -136,8 +168,13 @@ button.danger {
   color: white;
 }
 
-/* --- LIVE PREVIEW --- */
+button svg {
+  width: 18px;
+  height: 18px;
+  fill: white;
+}
 
+/* Live Preview */
 .live-preview {
   margin-top: 30px;
   border-top: 1px dashed var(--border-color);
@@ -159,18 +196,26 @@ button.danger {
   border-radius: var(--radius);
   box-shadow: var(--shadow);
   align-items: flex-start;
+  justify-content: center;
 }
 
 .preview-box img {
   width: 280px;
   max-width: 100%;
+  height: auto;
   border-radius: 10px;
   object-fit: cover;
+  transition: transform var(--transition-fast);
+}
+
+.preview-box img:hover {
+  transform: scale(1.03);
 }
 
 .preview-details {
-  flex: 1;
-  min-width: 250px;
+  flex: 1 1 300px;
+  min-width: 260px;
+  max-width: 100%;
 }
 
 .preview-details h3 {
@@ -201,11 +246,14 @@ button.danger {
   margin-top: 10px;
 }
 
-/* --- RESPONSIVE --- */
-
-@media (max-width: 768px) {
+/* Responsive */
+@media (max-width: 992px) {
   .form-actions {
     flex-direction: column;
+  }
+
+  button {
+    width: 100%;
   }
 
   .preview-box {
@@ -219,17 +267,65 @@ button.danger {
   }
 
   h2 {
-    font-size: 24px;
+    font-size: 26px;
   }
 
   h3 {
     font-size: 20px;
   }
+}
 
-  button {
-    width: 100%;
+@media (max-width: 576px) {
+  h2 {
+    font-size: 22px;
+  }
+
+  h3 {
+    font-size: 18px;
+  }
+
+  .card {
+    padding: 16px;
+  }
+
+  .preview-box {
+    gap: 16px;
+    padding: 12px;
+  }
+
+  .preview-details h3 {
+    font-size: 18px;
+  }
+
+  .preview-details p {
+    font-size: 13px;
   }
 }
+
+/* Animations */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+  
+
   </style>
 </head>
 <body>
@@ -244,6 +340,8 @@ button.danger {
           <option value="za">Sort Z-A</option>
         </select>
       </div>
+
+      <button id="darkToggle">🌙 Toggle Dark Mode</button>
 
       <select id="productSelector">
         <option value="">➕ Create New Product</option>
@@ -454,6 +552,11 @@ button.danger {
         .map(t => `<span class='tag'>${t.value}</span>`).join(" ");
       document.getElementById("previewTags").innerHTML = tags;
     }
+
+    document.getElementById("darkToggle").addEventListener("click", () => {
+  document.body.classList.toggle("dark-mode");
+});
+    
   </script>
 </body>
 </html>
