--- a/products-dash.html
+++ b/products-dash.html
@@ -200,11 +200,11 @@ button svg {
 }
 
 .preview-box img {
-  width: 280px;
+  width: 200px;
   max-width: 100%;
   height: auto;
   border-radius: 10px;
-  object-fit: cover;
+  object-fit: contain;
   transition: transform var(--transition-fast);
 }
 
