--- a/products-dash.html
+++ b/products-dash.html
@@ -200,9 +200,9 @@ button svg {
 }
 
 .preview-box img {
-  width: 200px;
+  width: 100px;
   max-width: 100%;
-  height: auto;
+  height: 100;
   border-radius: 10px;
   object-fit: contain;
   transition: transform var(--transition-fast);
@@ -214,7 +214,7 @@ button svg {
 
 .preview-details {
   flex: 1 1 300px;
-  min-width: 260px;
+  min-width: 200px;
   max-width: 100%;
 }
 
