--- a/products-dash.html
+++ b/products-dash.html
@@ -201,8 +201,8 @@ button svg {
 
 .preview-box img {
   width: 100px;
-  max-width: 100%;
-  height: 100;
+  max-width: 100px;
+  height: 100px;
   border-radius: 10px;
   object-fit: contain;
   transition: transform var(--transition-fast);
@@ -213,7 +213,7 @@ button svg {
 }
 
 .preview-details {
-  flex: 1 1 300px;
+  flex: 1 1 200px;
   min-width: 200px;
   max-width: 100%;
 }
